--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ style: styles-6
 
 #Profile information
 name: Jake P Schneider
-tagline: Music Producer & Audio Engineer
+tagline: Producer | Engineer | Designer
 pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
 #sidebar links
