feat: new entry + content ud

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Jacob Schneider
 email: Jake.P.Schneider@gmail.com
 url: https://JPSchneider.com
-description: "Jake P Schneider's Web Design and Graphics Portfolio"
+description: "Jacob Schneider's Web Design and Graphics Portfolio"
 skills: "Web Developer - Graphic Artist - User Experience Designer"
 meta_author: Schneider Jake
 
